update social links

--- a/index.html
+++ b/index.html
@@ -61,8 +61,13 @@
         </a>
       </li>
       <li class="list-unstyled-item">
-        <a href="https://www.instagram.com/fanadewi19/" target="_blank">
-          <i class="fab fa-instagram"></i>
+        <a href="https://www.linkedin.com/in/fanadewi2512/" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </li>
+      <li class="list-unstyled-item">
+        <a href="https://open.spotify.com/user/21npbwb27f7pwy7eygy4b3mnq" target="_blank">
+          <i class="fab fa-spotify"></i>
         </a>
       </li>
     </ul>
