add poster for fallback image

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
 
   <div class="overlay"></div>
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="https://res.cloudinary.com/fanadewi19/video/upload/v1616084676/%EC%A7%80%EA%B8%88%EA%BB%8F_%EA%B7%B8%EB%9E%AC%EB%93%AF_%EC%95%9E%EC%9C%BC%EB%A1%9C%EB%8F%84_%EA%B3%84%EC%86%8DCover_by_YURI_of_IZ_ONE.mp4" type="video/mp4">
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" poster="img/joyuri.jpg">
+    <source src="https://res.cloudinary.com/fanadewi19/video/upload/v1616187009/joyuri.mp4" type="video/mp4">
   </video>
 
   <div class="masthead">
