--- a/index.html
+++ b/index.html
@@ -31,17 +31,12 @@
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
             <h1 class="mb-3">Hello There!</h1>
-            <p class="mb-5">
+            <p>
               I'm Fitri Ana Dewi, but I always ask people to call me <strong><a href="https://about.me/fanadewi" class="text-white" target="_blank">"Ana"</a></strong></a>.
               I'm a Software Engineer who loves to make people's life easier.
-              Have something to say? Send me a message using the form below!</p>
-            <form class="input-group input-group-send-message mb-5">
-              <input type="text" id="message-field" class="form-control" placeholder="Enter your message..." aria-label="Enter your message..." aria-describedby="submit-button">
-              <div class="input-group-append">
-                <button class="btn btn-secondary" type="button" id="submit-button">Send Message!</button>
-              </div>
-            </form>
-            <p>P.S. The girl in the background is not me.</p>
+              How I did that? I wrote technical diaries on my blog. Check this out!</p>
+              <p class="text-center"><a class="btn btn-secondary" type="button" href="https://fanadewi.medium.com/" target="_blank">Ana's Blog</a></p>
+            <pre>P.S. The girl in the background is not me.</pre>
           </div>
         </div>
       </div>
@@ -53,11 +48,6 @@
       <li class="list-unstyled-item">
         <a href="https://github.com/fanadewi" target="_blank">
           <i class="fab fa-github"></i>
-        </a>
-      </li>
-      <li class="list-unstyled-item">
-        <a href="https://fanadewi.medium.com/" target="_blank">
-          <i class="fab fa-medium"></i>
         </a>
       </li>
       <li class="list-unstyled-item">
